# lightgbm-serving

./: .clang-format  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: test docker.yml
include/lightgbm-serving/: config_parser.hh  model.hh
scripts/: generate_random_classifier_model.py
src/: config.h.in  config_parser.cc  config_parser.hh  config_parser_test.cc  main.cc  model.cc  model.hh  model_test.cc  server.cc  server.hh  server_test.cc
src/test_data/: test-model  test_config.json  test_config_no_config.json
